Corrijo media queries

--- a/index.html
+++ b/index.html
@@ -128,14 +128,16 @@
 
     <!--BENEFICIOS-->
     <section id="beneficios" class="section2">
-        <h2>Beneficios</h2>
-        <div class="tablebeneficios" data-aos="flip-right" data-aos-duration="1000"> 
-            <div class="benefits">1 Beneficio, lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-            <div class="benefits" data-aos="flip-right" data-aos-duration="1500">2 Beneficio, pariatur, corporis nesciunt! Deserunt corporis fugiat libero velit dicta, accusamus aliquid tempore.</div>
-            <div class="benefits" data-aos="flip-right" data-aos-duration="2000">3 Beneficio doloremque, dolor a iure, soluta incidunt fugit facilis suscipit consequuntur.</div>
+        <div class="container-fluid">
+            <h2>Beneficios</h2>
+            <div class="tablebeneficios row" data-aos="flip-right" data-aos-duration="1000"> 
+                <div class="benefits col-sm">1 Beneficio, lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                <div class="benefits col-sm" data-aos="flip-right" data-aos-duration="1500">2 Beneficio, pariatur, corporis nesciunt! Deserunt corporis fugiat libero velit dicta, accusamus aliquid tempore.</div>
+                <div class="benefits col-sm" data-aos="flip-right" data-aos-duration="2000">3 Beneficio doloremque, dolor a iure, soluta incidunt fugit facilis suscipit consequuntur.</div>
+                </div>
             </div>
-        </dive>
-        <img src="images/Shiny Happy - Outdoors.png" alt="Beneficios de Revenue Management Sheet" class="img-beneficios" data-aos="fade-up">
+            <img src="images/Shiny Happy - Outdoors.png" alt="Beneficios de Revenue Management Sheet" class="img-beneficios" data-aos="fade-up">
+        </div>
     </section>
 
     <!--COMO FUNCIONA-->
@@ -151,28 +153,55 @@
         <p class="highlighet-text">
                 Tambien podes escuchar la explicacion en este audio
         </p>
-            <audio src="audio/ReadyforFreddy.mp3" controls></audio>
     </section>
     
     <!--REVIEWS-->
     <section id="opiniones" class="section4" data-aos="fade-up">
-        <h2>Reviews</h2>
-           <p>
-            Los hoteleros <span class="highlighet-text">aman Revenue Management Sheet</span>, mira lo que dicen!
-           </p>
-        <table class="tabletestimonios">
-            <tr>
-                <td class="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos quidem saepe culpa vel  cmmodi voluptatem</td>
-                <td class="message">Accusantium quis libero architecto assumenda quas laudantium provident perferendis totam ipsa? Laborum, placeat perspiciatis!</td>
-                <td class="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, vel qui cum rerum animi.</td>
-            </tr>
-            <tr>
-                <td><img src="images/testimonial1.png" alt="Testimonio sobre Revenue Management Sheet" class="testimonials"><h5>Isabel Allende</h5><h6>Spirit House Hotel</h6></td>
-                <td><img src="images/testimonial2.png" alt="Opinión sobre Revenue Management Sheet" class="testimonials"><h5>Mario Vargas Llosa</h5><h6>Hotel Pantaleon</h6></td>
-                <td><img src="images/testimonial3.png" alt="Comentario sobre Revenue Management Sheet" class="testimonials"><h5>Paloma Carmona</h5><h6>Hotel La Luna</h6></td>
-            </tr>
-        </table>
+        <div class="container-fluid">
+            <div class="row">
+                <h2>Reviews</h2>
+                <p>
+                    Los hoteleros <span class="highlighet-text">aman Revenue Management Sheet</span>, mira lo que dicen!
+                </p>
 
+                <!-- <table class="tabletestimonios">
+                    <tr>
+                        <td class="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos quidem saepe culpa vel  cmmodi voluptatem</td>
+                        <td class="message">Accusantium quis libero architecto assumenda quas laudantium provident perferendis totam ipsa? Laborum, placeat perspiciatis!</td>
+                        <td class="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, vel qui cum rerum animi.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="images/testimonial1.png" alt="Testimonio sobre Revenue Management Sheet" class="testimonials"><h5>Isabel Allende</h5><h6>Spirit House Hotel</h6></td>
+                        <td><img src="images/testimonial2.png" alt="Opinión sobre Revenue Management Sheet" class="testimonials"><h5>Mario Vargas Llosa</h5><h6>Hotel Pantaleon</h6></td>
+                        <td><img src="images/testimonial3.png" alt="Comentario sobre Revenue Management Sheet" class="testimonials"><h5>Paloma Carmona</h5><h6>Hotel La Luna</h6></td>
+                    </tr>
+                </table> -->
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm">
+                            <p class="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos quidem saepe culpa vel  cmmodi voluptatem</p>
+                            <div>
+                            <img src="images/testimonial1.png" alt="Testimonio sobre Revenue Management Sheet" class="testimonials"><h5>Isabel Allende</h5><h6>Spirit House Hotel</h6>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <p class="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos quidem saepe culpa vel  cmmodi voluptatem</p>
+                            <div>
+                                <img src="images/testimonial2.png" alt="Opinión sobre Revenue Management Sheet" class="testimonials img-fluid"><h5>Mario Vargas Llosa</h5><h6>Hotel Pantaleon</h6>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <p class="message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos quidem saepe culpa vel  cmmodi voluptatem</p>
+                            <div>
+                                <img src="images/testimonial3.png" alt="Comentario sobre Revenue Management Sheet" class="testimonials"><h5>Paloma Carmona</h5><h6>Hotel La Luna</h6>
+                            </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
     </section>
 
     <!--CONTACTO-->
