Update index.html: elimino / previo a images

--- a/index.html
+++ b/index.html
@@ -197,24 +197,24 @@
              <section class="container-fluid">
                 <h2>Confian en nosotros</h2>
                 <div class="logos">
-                <span class="slide"><img src="/images/hampton.png"></span>
-                <span class="slide"><img src="/images/hilton.png"></span>
-                <span class="slide"><img src="/images/hyatt.png"></span>
-                <span class="slide"><img src="/images/marriott.png"></span>
-                <span class="slide"><img src="/images/millennium.png"></span>
-                <span class="slide"><img src="/images/sheraton.png"></span>
+                <span class="slide"><img src="images/hampton.png"></span>
+                <span class="slide"><img src="images/hilton.png"></span>
+                <span class="slide"><img src="images/hyatt.png"></span>
+                <span class="slide"><img src="images/marriott.png"></span>
+                <span class="slide"><img src="images/millennium.png"></span>
+                <span class="slide"><img src="images/sheraton.png"></span>
                 <span class="slide"><img src="images/starwood.png"></span>
-                <span class="slide"><img src="/images/w-hotels.png"></span>
-                <span class="slide"><img src="/images/westin.png"></span>
-                <span class="slide"><img src="/images/hampton.png"></span>
-                <span class="slide"><img src="/images/hilton.png"></span>
-                <span class="slide"><img src="/images/hyatt.png"></span>
-                <span class="slide"><img src="/images/marriott.png"></span>
-                <span class="slide"><img src="/images/millennium.png"></span>
-                <span class="slide"><img src="/images/sheraton.png"></span>
+                <span class="slide"><img src="images/w-hotels.png"></span>
+                <span class="slide"><img src="images/westin.png"></span>
+                <span class="slide"><img src="images/hampton.png"></span>
+                <span class="slide"><img src="images/hilton.png"></span>
+                <span class="slide"><img src="images/hyatt.png"></span>
+                <span class="slide"><img src="images/marriott.png"></span>
+                <span class="slide"><img src="images/millennium.png"></span>
+                <span class="slide"><img src="images/sheraton.png"></span>
                 <span class="slide"><img src="images/starwood.png"></span>
-                <span class="slide"><img src="/images/w-hotels.png"></span>
-                <span class="slide"><img src="/images/westin.png"></span>
+                <span class="slide"><img src="images/w-hotels.png"></span>
+                <span class="slide"><img src="images/westin.png"></span>
                 </div>
              </section>
 
