Agrego seccion de contacto y corrijo animacion de logos

--- a/index.html
+++ b/index.html
@@ -195,26 +195,26 @@
 
         <div class="section-clientes" id="clientes">
              <section class="container-fluid">
-                <h2>Confian en nosotros</h2>
+                <h2>Hacen Revenue con nosotros</h2>
                 <div class="logos">
-                <span class="slide"><img src="images/hampton.png"></span>
-                <span class="slide"><img src="images/hilton.png"></span>
-                <span class="slide"><img src="images/hyatt.png"></span>
-                <span class="slide"><img src="images/marriott.png"></span>
-                <span class="slide"><img src="images/millennium.png"></span>
-                <span class="slide"><img src="images/sheraton.png"></span>
-                <span class="slide"><img src="images/starwood.png"></span>
-                <span class="slide"><img src="images/w-hotels.png"></span>
-                <span class="slide"><img src="images/westin.png"></span>
-                <span class="slide"><img src="images/hampton.png"></span>
-                <span class="slide"><img src="images/hilton.png"></span>
-                <span class="slide"><img src="images/hyatt.png"></span>
-                <span class="slide"><img src="images/marriott.png"></span>
-                <span class="slide"><img src="images/millennium.png"></span>
-                <span class="slide"><img src="images/sheraton.png"></span>
-                <span class="slide"><img src="images/starwood.png"></span>
-                <span class="slide"><img src="images/w-hotels.png"></span>
-                <span class="slide"><img src="images/westin.png"></span>
+                <span class="slide"><img src="images/hampton.png" alt="Hoteles Hampton"></span>
+                <span class="slide"><img src="images/hilton.png" alt="Hoteles Hilton"></span>
+                <span class="slide"><img src="images/hyatt.png" alt="Hyatt hoteles"></span>
+                <span class="slide"><img src="images/marriott.png" alt="Marriot Hoteles"></span>
+                <span class="slide"><img src="images/millennium.png" alt="Millenium Resorts"></span>
+                <span class="slide"><img src="images/sheraton.png" alt="Sheraton Hoteles"></span>
+                <span class="slide"><img src="images/starwood.png" alt="Starwood"></span>
+                <span class="slide"><img src="images/w-hotels.png" alt="W Hotels"></span>
+                <span class="slide"><img src="images/westin.png" alt="Cadena Westin"></span>
+                <span class="slide"><img src="images/hampton.png" alt="Hoteles Hampton"></span>
+                <span class="slide"><img src="images/hilton.png" alt="Hoteles Hilton"></span>
+                <span class="slide"><img src="images/hyatt.png" alt="Hyatt hoteles"></span>
+                <span class="slide"><img src="images/marriott.png" alt="Marriot Hoteles"></span>
+                <span class="slide"><img src="images/millennium.png" alt="Millenium Resorts"></span>
+                <span class="slide"><img src="images/sheraton.png" alt="Sheraton Hoteles"></span>
+                <span class="slide"><img src="images/starwood.png" alt="Starwood"></span>
+                <span class="slide"><img src="images/w-hotels.png" alt="W Hotels"></span>
+                <span class="slide"><img src="images/westin.png" alt="Cadena Westin"></span>
                 </div>
              </section>
 
@@ -226,7 +226,7 @@
     <section id="contacto" data-aos="fade-up">
         <h2>Contacto</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo earum minima rerum in inventore cumque tenetur beatae veniam id possimus maxime hic itaque autem molestias quam, corporis ex repellendus ullam.
+            ¿Podemos ayudarte? Envianos un email a <a href="mailto:hola@revenue.com"><span class="highlighet-text">hola@revenue.com</span></a> o <a href="https://api.whatsapp.com/send?phone=+5492615352771&text=Hola!%20Tengo%20una%20pregunta%20sobre%20Hotel%20Revenue%20Sheet">escríbenos por Whatsapp <i class="fab fa-whatsapp"></i></a>.
         </p>
     </section>
 
